// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-beqWul sc-gueWre hfxARC jZaMhY"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-beqWul sc-gueWre fvcRR jZaMhY"
>
  foo
</button>
`;
